# alpharay

./: .anjuta_sym_db.db  .gitignore  README  README.md  config.h.in  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
examples/: hello.xml  lightbox.xml  planets.xml  project.xml
src/: Makefile.am  area-light.cc  area-light.h  baseobject.h  bbox.cc  bbox.h  bitmap.cc  bitmap.h  boolean.cc  boolean.h  camera.cc  camera.h  canvas.cc  canvas.h  checkermap.cc  checkermap.h  cimg-image.cc  cimg-image.h  climain.cc  cone.cc  cone.h  editable.h  float-image.cc  float-image.h  gl-image.cc  gl-image.h  group.cc  gui.cc  gui.h  guimain.cc  image.cc  image.h  light.cc  light.h  linklist.h  main.cc  mainframe.cc  mainframe.h  map.cc  map.h  (+63 more)
src/libalpharay/: Makefile.am  area-light.cc  area-light.h  baseobject.h  bbox.cc  bitmap.cc  bitmap.h  camera.cc  camera.h  canvas.cc  canvas.h  cone.cc  cone.h  editable.h  filename.cc  filename.h  group.cc  group.h  image.h  light.cc  light.h  map.cc  map.h  material.cc  material.h  mesh.cc  mesh.h  object.cc  object.h  object2d.cc  object2d.h  octree.cc  pathtracer.cc  pathtracer.h  plane.cc  plane.h  project.cc  project.h  ray.cc  ray.h  (+21 more)
tools/: blender_alpharay_exporter.py  objtoxml.py
